# prema_streamlit_ai

./: const.py  home_page.py  main.py  pyproject.toml  requirements.txt
pages/: chat_gpt.py  own_gpt.py  trained_gpt.py
